IN=4089 A11Y bugfixes of Beans module UI.

--- a/beans/src/org/netbeans/modules/beans/Bundle.properties
+++ b/beans/src/org/netbeans/modules/beans/Bundle.properties
@@ -33,53 +33,141 @@ CTL_TITLE_GenerateBeanInfo=BeanInfo Editor...
 CTL_PropertyPanel_propertyPanel=Property
 CTL_PropertyPanel_optionsPanel=Options
 CTL_PropertyPanel_nameLabel=Name:
+CTL_PropertyPanel_nameLabel_Mnemonic=N
 CTL_PropertyPanel_typeLabel=Type:
+CTL_PropertyPanel_typeLabel_Mnemonic=Y
 CTL_PropertyPanel_modeLabel=Mode:
+CTL_PropertyPanel_modeLabel_Mnemonic=M
 CTL_PropertyPanel_boundCheckBox=Bound
+CTL_PropertyPanel_boundCheckBox_Mnemonic=B
 CTL_PropertyPanel_constrainedCheckBox=Constrained
+CTL_PropertyPanel_constrainedCheckBox_Mnemonic=C
 CTL_PropertyPanel_fieldCheckBox=Generate Field
+CTL_PropertyPanel_fieldCheckBox_Mnemonic=F
 CTL_PropertyPanel_returnCheckBox=Generate Return Statement
+CTL_PropertyPanel_returnCheckBox_Mnemonic=R
 CTL_PropertyPanel_setCheckBox=Generate Set Statement
+CTL_PropertyPanel_setCheckBox_Mnemonic=T
 CTL_PropertyPanel_supportCheckBox=Generate Property Change Support
+CTL_PropertyPanel_supportCheckBox_Mnemonic=P
+
+ACS_PropertyPanel_nameLabelA11yDesc=Property name.
+ACS_PropertyPanel_nameTextFieldA11yName=Property name text field
+ACS_PropertyPanel_nameTextFieldA11yDesc=Property name.
+ACS_PropertyPanel_typeLabelA11yDesc=Indexed type of this property.
+ACS_PropertyPanel_typeComboBoxA11yName=Indexed type combo box
+ACS_PropertyPanel_typeComboBoxA11yDesc=Combo box containing all available types.
+ACS_PropertyPanel_modeLabelA11yDesc=Property mode.
+ACS_PropertyPanel_modeComboBoxA11yName=Property mode combo box
+ACS_PropertyPanel_modeComboBoxA11yDesc=Combo box containing all property modes.
+ACS_PropertyPanel_boundCheckBoxA11yDesc=Select this checkbox to create a bound property.
+ACS_PropertyPanel_constrainedCheckBoxA11yDesc=Select this checkbox to create a constrained property.
+ACS_PropertyPanel_fieldCheckBoxA11yDesc=Select this checkbox to generate a private field with the same name.
+ACS_PropertyPanel_returnCheckBoxA11yDesc=Select this checkbox to insert code in the body of the getter method that returns the field.
+ACS_PropertyPanel_setCheckBoxA11yDesc=Select this checkbox to insert code in the body of the setter method that sets the value of the property field to the value of the setter parameter.
+ACS_PropertyPanel_supportCheckBoxA11yDesc=Select this checkbox to generate all code needed for firing PropertyChangeEvents or VetoableChangeEvents.
 
 # CONTROLS - IdxPropertyPatternPanel
 CTL_IdxPropertyPanel_propertyPanel=Property
 CTL_IdxPropertyPanel_optionsPanel=Options
 CTL_IdxPropertyPanel_niOptionsPanel=Non-Index Options
 CTL_IdxPropertyPanel_nameLabel=Name:
+CTL_IdxPropertyPanel_nameLabel_Mnemonic=N
 CTL_IdxPropertyPanel_typeLabel=Indexed Type:
+CTL_IdxPropertyPanel_typeLabel_Mnemonic=I
 CTL_IdxPropertyPanel_modeLabel=Mode:
+CTL_IdxPropertyPanel_modeLabel_Mnemonic=M
 CTL_IdxPropertyPanel_boundCheckBox=Bound
+CTL_IdxPropertyPanel_boundCheckBox_Mnemonic=B
 CTL_IdxPropertyPanel_constrainedCheckBox=Constrained
+CTL_IdxPropertyPanel_constrainedCheckBox_Mnemonic=C
 CTL_IdxPropertyPanel_fieldCheckBox=Generate Field
+CTL_IdxPropertyPanel_fieldCheckBox_Mnemonic=F
 CTL_IdxPropertyPanel_returnCheckBox=Generate Return Statement
+CTL_IdxPropertyPanel_returnCheckBox_Mnemonic=R
 CTL_IdxPropertyPanel_setCheckBox=Generate Set Statement
+CTL_IdxPropertyPanel_setCheckBox_Mnemonic=T
 CTL_IdxPropertyPanel_supportCheckBox=Generate Property Change Support
+CTL_IdxPropertyPanel_supportCheckBox_Mnemonic=P
 CTL_IdxPropertyPanel_niGetterCheckBox=Generate Getter
+CTL_IdxPropertyPanel_niGetterCheckBox_Mnemonic=G
 CTL_IdxPropertyPanel_niReturnCheckBox=With Return Statement
+CTL_IdxPropertyPanel_niReturnCheckBox_Mnemonic=W
 CTL_IdxPropertyPanel_niSetterCheckBox=Generate Setter
+CTL_IdxPropertyPanel_niSetterCheckBox_Mnemonic=S
 CTL_IdxPropertyPanel_niSetCheckBox=With Set Statement
+CTL_IdxPropertyPanel_niSetCheckBox_Mnemonic=H
+
+ACS_IdxPropertyPanel_nameLabelA11yDesc=Property name.
+ACS_IdxPropertyPanel_nameTextFieldA11yName=Property name text field
+ACS_IdxPropertyPanel_nameTextFieldA11yDesc=Property name.
+ACS_IdxPropertyPanel_typeLabelA11yDesc=Indexed type of this property.
+ACS_IdxPropertyPanel_typeComboBoxA11yName=Indexed type combo box
+ACS_IdxPropertyPanel_typeComboBoxA11yDesc=Combo box containing all available types.
+ACS_IdxPropertyPanel_modeLabelA11yDesc=Property mode.
+ACS_IdxPropertyPanel_modeComboBoxA11yName=Property mode combo box
+ACS_IdxPropertyPanel_modeComboBoxA11yDesc=Combo box containing all property modes.
+ACS_IdxPropertyPanel_boundCheckBoxA11yDesc=Select this checkbox to create a bound property.
+ACS_IdxPropertyPanel_constrainedCheckBoxA11yDesc=Select this checkbox to create a constrained property.
+ACS_IdxPropertyPanel_fieldCheckBoxA11yDesc=Select this checkbox to generate a private field with the same name.
+ACS_IdxPropertyPanel_returnCheckBoxA11yDesc=Select this checkbox to insert code in the body of the getter method that returns the field.
+ACS_IdxPropertyPanel_setCheckBoxA11yDesc=Select this checkbox to insert code in the body of the setter method that sets the value of the property field to the value of the setter parameter.
+ACS_IdxPropertyPanel_supportCheckBoxA11yDesc=Select this checkbox to generate all code needed for firing PropertyChangeEvents or VetoableChangeEvents.
+ACS_IdxPropertyPanel_niGetterCheckBoxA11yDesc=Select this checkbox to generate getter methods that apply to all elements of the array.
+ACS_IdxPropertyPanel_niReturnCheckBoxA11yDesc=Select this checkbox to add return statement to the getter methods.
+ACS_IdxPropertyPanel_niSetterCheckBoxA11yDesc=Select this checkbox to generate setter methods that apply to all elements of the array.
+ACS_IdxPropertyPanel_niSetCheckBoxA11yDesc=Select this checkbox to add set statement to the setter methods.
 
 # CONTROLS - EventSetPatternPanel
 CTL_EventSetPanel_eventSetPanel=Event Set
 CTL_EventSetPanel_optionsPanel=Options
 CTL_EventSetPanel_typeLabel=Type:
+CTL_EventSetPanel_typeLabel_Mnemonic=T
 CTL_EventSetPanel_textLabel=(Fully-qualified listener interface name)
 CTL_EventSetPanel_emptyRadioButton=Generate Empty
+CTL_EventSetPanel_emptyRadioButton_Mnemonic=G
 CTL_EventSetPanel_alRadioButton=Generate ArrayList Implementation
+CTL_EventSetPanel_alRadioButton_Mnemonic=A
 CTL_EventSetPanel_ellRadioButton=Generate EventListenerList Implementation
+CTL_EventSetPanel_ellRadioButton_Mnemonic=E
 CTL_EventSetPanel_fireCheckBox=Generate Event Firing Methods
+CTL_EventSetPanel_fireCheckBox_Mnemonic=F
 CTL_EventSetPanel_passEventCheckBox=Pass Event as Parameter
+CTL_EventSetPanel_passEventCheckBox_Mnemonic=P
+
+ACS_EventSetPanel_typeLabelA11yDesc=Event type
+ACS_EventSetPanel_typeComboBoxA11yName=Event type combo box
+ACS_EventSetPanel_typeComboBoxA11yDesc=Combo box containing all event types.
+ACS_EventSetPanel_textLabelA11yDesc=Fully-qualified listener interface name.
+ACS_EventSetPanel_emptyRadioButtonA11yDesc=Generates an empty implementation.
+ACS_EventSetPanel_alRadioButtonA11yDesc=Generates a simple implementation for multiple listeners.
+ACS_EventSetPanel_ellRadioButtonA11yDesc=Generates an implementation using the EventListenerList support class from the javax.swing.event package.
+ACS_EventSetPanel_fireCheckBoxA11yDesc=Select this checkbox to generate event firing methods for all listeners.
+ACS_EventSetPanel_passEventCheckBoxA11yDesc=Select this checkbox to add the event as a parameter to each event firing method.
 
 # CONTROLS - UEventPatternPanel
 CTL_UEventSetPanel_eventSetPanel=Event Set
 CTL_UEventSetPanel_optionsPanel=Options
 CTL_UEventSetPanel_typeLabel=Type:
+CTL_UEventSetPanel_typeLabel_Mnemonic=T
 CTL_UEventSetPanel_textLabel=(Fully-qualified listener interface name)
 CTL_UEventSetPanel_emptyRadioButton=Generate Empty
+CTL_UEventSetPanel_emptyRadioButton_Mnemonic=G
 CTL_UEventSetPanel_implRadioButton=Generate Implementation
+CTL_UEventSetPanel_implRadioButton_Mnemonic=E
 CTL_UEventSetPanel_fireCheckBox=Generate Event Firing Methods
+CTL_UEventSetPanel_fireCheckBox_Mnemonic=F
 CTL_UEventSetPanel_passEventCheckBox=Pass Event as Parameter
+CTL_UEventSetPanel_passEventCheckBox_Mnemonic=P
+
+ACS_UEventSetPanel_typeLabelA11yDesc=Event type
+ACS_UEventSetPanel_typeComboBoxA11yName=Event type combo box
+ACS_UEventSetPanel_typeComboBoxA11yDesc=Combo box containing all event types.
+ACS_UEventSetPanel_textLabelA11yDesc=Fully-qualified listener interface name.
+ACS_UEventSetPanel_emptyRadioButtonA11yDesc=Generates an empty implementation.
+ACS_UEventSetPanel_implRadioButtonA11yDesc=Generates an implementation using the EventListenerList support class from the javax.swing.event package.
+ACS_UEventSetPanel_fireCheckBoxA11yDesc=Select this checkbox to generate event firing methods for all listeners.
+ACS_UEventSetPanel_passEventCheckBoxA11yDesc=Select this checkbox to add the event as a parameter to each event firing method.
 
 # Source options
 MSG_sourceOptions=Source Settings
