New code completion code merged from xml-integration branch. The merge affect syntax coloring a little bit, some "colors" are missing just now. The completion code is in alpha stage as it just become to work for element completion.
New SPI defined. Please review it at xml.spi.model package.

Oh, I see that cvs join does not remove files. Sources related
old JavaCC generated XML document coloring should be removed.

--- a/xml.text/build.xml
+++ b/xml.text/build.xml
@@ -54,6 +54,7 @@ Microsystems, Inc. All Rights Reserved.
                 </fileset>
                 <pathelement location="${nb_root}/editor/netbeans/modules/ext/nb-editor.jar"/>
                 <pathelement location="${nb_root}/editor/netbeans/modules/editor.jar"/>
+        	<pathelement location="${bin_root}/core/release/lib/ext/xerces.jar"/>  <!-- DOM -->
                 <pathelement location="${tax_root}/libsrc/"/>
                 <pathelement location="${core_root}/src/"/>
             </classpath>
@@ -133,5 +134,4 @@ Microsystems, Inc. All Rights Reserved.
     <target name="test">
         <ant dir="testbase" target="run"/>
     </target>
-
 </project>
