--- a/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
+++ b/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
@@ -56,12 +56,15 @@ CTL_Reconnecting_to_socket_noargs=Reconnecting through network
 CTL_Reconnecting_to_socket=Reconnecting to {0}:{1}
 CTL_Reconnecting_to=Reconnecting
 CTL_No_Connector=No connector found
-CTL_Connector=Connector: 
+CTL_Connector=Connector:
 CTL_Transport=Transport:
 CTL_Transport_Mnemonic=T
 CTL_Stop_On_Main_print_text=Thread {threadName} stopped at {className}.{methodName} line {lineNumber}.
 CTL_VM_init_failed=VM initialization failed
 CTL_Connection_established=Connection established
+ACSD_CTL_Transport=
+ACSD_CTL_Connector=
+ACSD_CTL_Argument=Insert {0} Argument
 
 #Display name of settings of the "Attach to VM" dialog
 CTL_Attach_settings=JPDA Debugger Attach Settings
@@ -107,16 +110,16 @@ HINT_Exception_class_name=Name of class (or superclass) of exception
 CTL_Source_compiled_without_g=source compiled without -g option
 #MethodBreakpoint
 HINT_breakpoint_apply_to_anonymous_inner=Apply the breakpoint also to anonymous inner classes of the specified class?
-#MethodBreakpoint
 PROP_breakpoint_apply_to_anonymous_inner=Anonymous inner classes
-#In the "Add breakpoint" dialog, Method breakpoint
-CTL_Anonymous_classes_mnemonic=A
-#In the "Add breakpoint" dialog, Method breakpoint
-CTL_Anonymous_classes=Apply also to anonymous inner classes
-#LineBreakpointPanel
-CTL_Package_name_mnemonic=k
-#LineBreakpointPanel
+
+#...BreakpointPanel
 CTL_Package_name=Package Name:
+CTL_Package_name_mnemonic=k
+ACSD_CTL_Package_name=
+CTL_Class_name=Class Name:
+CTL_Class_name_mnemonic=N
+ACSD_CTL_Class_name=
+
 #Debugging via 'Start', unable to resolve hostname (network broken).
 EXC_Cannot_establish_connection_to_VM=Cannot establish connection to the VM.
 PROP_Exception_type_name=Stop on
@@ -134,6 +137,8 @@ CTL_Exception_stop_on_mnemonic=o
 CTL_Exception_catch=Exception Caught
 CTL_Exception_uncatch=Exception Uncaught
 CTL_Exception_both=Exception Caught or Uncaught
+ACSD_CTL_Exception_class_name=
+ACSD_CTL_Exception_stop_on=
 
 #VariableBreakpoint
 CTL_Variable_event_type_name=Variable
@@ -158,13 +163,16 @@ CTL_Break_on_field_not_supported=Warning: Breakpoint on variable access or modif
 #VariableBreakpointPanel
 CTL_Variable_access=Variable Access
 CTL_Variable_modification=Variable Modification
-CTL_Variable_class_name=Class Name: 
-CTL_Variable_class_name_mnemonic=n
-CTL_Variable_field_name=Field Name: 
+CTL_Variable_class_name=Class Name:
+CTL_Variable_class_name_mnemonic=N
+CTL_Variable_field_name=Field Name:
 CTL_Variable_field_name_mnemonic=F
-CTL_Variable_stop_on=Stop on: 
-CTL_Variable_stop_on_mnemonic=o
-
+CTL_Variable_stop_on=Stop on:
+CTL_Variable_stop_on_mnemonic=O
+ACSD_CTL_Variable_class_name=
+ACSD_CTL_Variable_field_name=
+ACSD_CTL_Variable_stop_on=
+ACSD_VariableBreakpointPanel=
 
 #MethodBreakpoint
 PROP_breakpoint_class_name=Class Name
@@ -182,10 +190,14 @@ CTL_All_method_event_name=Methods in {0}
 #MethodBreakpointPanel
 CTL_All_methods=\ All Methods for Given Classes
 CTL_All_methods_mnemonic=A
-CTL_Class_name=Class Name: 
-CTL_Class_name_mnemonic=n
 CTL_Method_name=Method Name: 
 CTL_Method_name_mnemonic=M
+CTL_Anonymous_classes=\ Apply Also to Anonymous Inner Classes
+CTL_Anonymous_classes_mnemonic=I
+ACSD_CTL_All_methods=
+ACSD_CTL_Method_name=
+ACSD_CTL_Anonymous_classes=
+ACSD_MethodBreakpointPanel=
 
 #ThreadBreakpoint
 PROP_breakpoint_type=Set on
@@ -205,8 +217,10 @@ CTL_Death=death
 CTL_Thread_start=Thread Start
 CTL_Thread_death=Thread Death
 CTL_Thread_both=Thread Start or Death
-CTL_Thread_Set_breakpoint_on=Set Breakpoint on: 
-CTL_Thread_Set_breakpoint_on_mnemonic=o
+CTL_Thread_Set_breakpoint_on=Set Breakpoint on:
+CTL_Thread_Set_breakpoint_on_mnemonic=O
+ACSD_CTL_Thread_Set_breakpoint_on=
+ACSD_ThreadBreakpointPanel=
 
 #ClassBreakpoint
 PROP_class_filter=Class filter
@@ -237,6 +251,8 @@ CTL_Class_filter_hint=(Set exclusion / non-exclusion filter for classes)
 CTL_Class_prepare=Class Prepare
 CTL_Class_unload=Class Unload
 CTL_Class_both=Class Prepare or Unload
+ACSD_CTL_Class_exclusion_filter=
+ACSD_CTL_Class_breakpoint_type=
 
 #LineBreakpoint
 PROP_breakpoint_source_name=Source Name
@@ -245,11 +261,11 @@ PROP_breakpoint_line_number=Line Number
 HINT_breakpoint_line_number=The line number this breakpoint is set on, if applicable.
 
 #LineBreakpointPanel
-CTL_Line_number=Line Number: 
+CTL_Line_number=Line Number:
 CTL_Line_number_mnemonic=L
-CTL_Class_name=Class Name: 
-CTL_Class_name_mnemonic=N
 CTL_Bad_line_number=Bad line number.\n Line number must be greater than 0.
+ACSD_CTL_Line_number=
+ACSD_LineBreakpointPanel=
 
 #Conditional breakpoints
 CTL_Incorrect_condition=Incorrect condition
@@ -258,3 +274,4 @@ PROP_condition=Condition
 HINT_condition=Boolean expression determining if the debugger should stop on the breakpoint.
 CTL_Condition=Condition:
 CTL_Condition_mnemonic=C
+ACSD_CTL_Condition=Condition for this breakpoint
