--- a/utilities/src/org/netbeans/modules/pdf/Bundle.properties
+++ b/utilities/src/org/netbeans/modules/pdf/Bundle.properties
@@ -34,6 +34,7 @@ LBL_reconfigure=\
 LBL_existing_exception=Details of the problem: {0}: {1}
 LBL_current_viewer=Current viewer:
 LBL_choose=Select ...
+LBL_choose_mnem=S
 
 # filenames
 Services/org-netbeans-modules-pdf-PDFSettings.settings=PDF Settings
