Updated junit module to support also NetBeans extensions to JUnit (NbJUnit) tests.

--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -118,3 +118,11 @@ MSG_execution_failed=Test execution has failed.
 PROP_generate_abstract_impl=Generate tests for Abstract classes
 HINT_generate_abstract_impl=Generate tests for Abstract classes
 JUnitCfgOfCreate.chkAbstractImpl.text=Include abstract classes
+# NetBeans extension to JUnit
+JUnitCfgOfCreate.generateNbJUnit.text=Generate NetBeans JUnit
+PROP_generate_nbjunit=Generate tests based on NetBeans extension to JUnit
+HINT_generate_nbjunit=Generate tests based on NetBeans extension to JUnit
+# Regenerate suite method
+JUnitCfgOfCreate.regenerateSuiteMethod.text=Regenerate suite method
+PROP_regenerate_suite_method=Regenerate suite method
+HINT_regenerate_suite_method=Regenerate suite method
