--- a/junit/build.xml
+++ b/junit/build.xml
@@ -24,10 +24,58 @@ Microsystems, Inc. All Rights Reserved.
   <property name="module.license.file" location="../nbbuild/standard-nbm-license.txt"/>
   <property name="junit.license.file" location="ibm-public-license.txt"/>
 
+  <target name="compile-junit-extensions">
+    <javac srcdir="src" destdir="src">
+      <include name="org/netbeans/junit/**"/>
+      <classpath>
+	<pathelement location="${binroot}/junit/release/lib/ext/junit.jar"/> 
+      </classpath>
+    </javac>
+  </target>
+
+  <target name="jar-junit-extensions" depends="compile-junit-extensions">
+      <mkdir dir="netbeans/lib/ext"/>
+      <jar jarfile="netbeans/lib/ext/junit-ext.jar"
+            basedir="src"
+            excludesfile="../nbbuild/standard-jar-excludes.txt"
+            compress="false"
+            includes="org/netbeans/junit/**"/>
+  </target>
+
+  <target name="clean-junit-extensions">
+    <delete>
+      <fileset dir="src">
+        <include name="org/netbeans/junit/**/*.class"/>
+      </fileset>
+    </delete>
+    <delete file="netbeans/lib/ext/junit-ext.jar"/>
+  </target>
+
+ <target name="javadoc-junit-extensions">
+      <mkdir dir="javadoc/nbjunit-api"/>
+      <javadoc packagenames="org.netbeans.junit" 
+               sourcepath="src" 
+	       destdir="javadoc/nbjunit-api"
+	       windowtitle="NetBeans extensions to JUnit"
+	       doctitle="NetBeans extensions to JUnit"
+	       classpath="${binroot}/junit/release/lib/ext/junit.jar"
+      />  
+      <mkdir dir="netbeans/docs"/>
+      <zip zipfile="netbeans/docs/nbjunit-api.zip"
+           basedir="javadoc/nbjunit-api"
+       />
+  </target>
+
+  <target name="clean-javadoc-junit-extensions">
+      <delete dir="javadoc/nbjunit-api"/>
+      <delete file="netbeans/docs/nbjunit-api.zip"/>
+  </target>
+
   <target name="compile">
     <javac srcdir="src" destdir="src"
            deprecation="${build.compiler.deprecation}"
            debug="${build.compiler.debug}">
+      <exclude name="org/netbeans/junit/**"/>
       <classpath>
 	<pathelement location="../openide/openide-13javac-workaround.jar"/>
         <fileset dir="../openide/netbeans/lib">
@@ -46,7 +94,8 @@ Microsystems, Inc. All Rights Reserved.
             manifest="manifest-subst.mf"
             basedir="src"
             excludesfile="../nbbuild/standard-jar-excludes.txt"
-            compress="false">
+            compress="false"
+	    includes="org/netbeans/modules/junit/**">
     </jar>
   </target>
 
@@ -62,7 +111,7 @@ Microsystems, Inc. All Rights Reserved.
     </copy>
   </target>
 
-  <target name="netbeans" depends="jars,javahelp,release"/>
+  <target name="netbeans" depends="jars,jar-junit-extensions,javadoc-junit-extensions,javahelp,release"/>
 
   <target name="nbm" depends="netbeans">
     <makenbm file="junit.nbm"
@@ -90,6 +139,7 @@ Microsystems, Inc. All Rights Reserved.
     <delete dir="netbeans"/>
     <delete file="junit.nbm"/>
     <delete dir="Info"/>
+    <delete dir="javadoc"/>
   </target>
 
   <target name="test" depends="netbeans">
