--- a/xml/build.xml
+++ b/xml/build.xml
@@ -14,8 +14,8 @@ Microsystems, Inc. All Rights Reserved.
 
 <project name="xml" default="netbeans" basedir=".">
 
-    <property name="nb_root" location=".."/>
-    <property name="bin_root" location="${nb_root}/../nbextra"/>
+    <property name="nb_root" location="../../nb_all"/>
+    <property name="bin_root" location="../../nbextra"/>
     <property name="nbext_root" location="${nb_root}/nbbuild"/>
 
     <taskdef  name="for-each" classname="org.netbeans.nbbuild.ForEach" classpath="${nbext_root}/nbantext.jar"/>
@@ -24,7 +24,7 @@ Microsystems, Inc. All Rights Reserved.
 
     <target name="init">
         <tstamp/>
-        <property name="buildnumber" value="${DSTAMP}-${TSTAMP}"/>
+        <property name="buildnumber" value="${DSTAMP}${TSTAMP}"/>
         <echo message="buildnumber = ${buildnumber}"/>
     </target>
 
