--- a/extbrowser/build.xml
+++ b/extbrowser/build.xml
@@ -55,7 +55,7 @@ Microsystems, Inc. All Rights Reserved.
   <target name="release">
     <copy todir="netbeans">
       <fileset dir="release" excludesfile="../nbbuild/standard-jar-excludes.txt">
-        <exclude name="sources"/>
+        <exclude name="**/sources/*"/>
       </fileset>
     </copy>
   </target>
