IN=4109 A11Y bugfixes of HTTP Server module UI.

--- a/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
+++ b/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
@@ -79,10 +79,19 @@ MSG_HTTP_NOT_FOUND=Cannot access requested resource.
 
 #HostPropertyCustomEditor.class
 CTL_GrantLabel=Grant Access to:
-CTL_GrantLabel.mnemonic=G
+CTL_GrantLabel_Mnemonic=G
 CTL_HostLabel=Host:
 CTL_AnyRadioButton=\ Any Host
+CTL_AnyRadioButton_Mnemonic=N
 CTL_SelectedRadioButton=\ Selected Hosts
+CTL_SelectedRadioButton_Mnemonic=S
+
+ACS_GrantLabelA11yDesc=Select hosts to grant access to.
+ACS_GrantTextAreaA11yName=Host list
+ACS_GrantTextAreaA11yDesc=Select a host to grant access to.
+ACS_HostLabelA11yDesc=Host selection.
+ACS_AnyRadioButtonA11yDesc=Select this option to use any host.
+ACS_SelectedRadioButtonA11yDesc=Select this option to use selected hosts.
 
 #filenames
 Services/org-netbeans-modules-httpserver-HttpServerSettings.settings=HTTP Server
