IN=4113 A11Y bugfixes of BeanInfoIconEditor panel.

--- a/beans/src/org/netbeans/modules/beans/beaninfo/Bundle.properties
+++ b/beans/src/org/netbeans/modules/beans/beaninfo/Bundle.properties
@@ -33,13 +33,26 @@ CTL_EXCLALL_MenuItem=Exclude All
 #editing icons
 CTL_ImageSourceType=Image Source:
 CTL_Classpath=Classpath
+CTL_Classpath_Mnemonic=C
 CTL_ClasspathExample=(e.g. /org/netbeans/resources/action.gif)
 CTL_NoPicture=No Picture
+CTL_NoPicture_Mnemonic=P
 CTL_Null=null
 CTL_ImageSourceName=Name:
+CTL_ImageSourceName_Mnemonic=N
 CTL_OpenDialogName=Open Image File
 CTL_FileSystemName=File &System
 CTL_Icon_not_exists=Image class path for {0} is not valid.
+
+ACS_ClasspathA11yDesc=Select this option to specify classpath to the icon image.
+ACS_ClasspathExampleA11yDesc=(e.g. /org/netbeans/resources/action.gif)
+ACS_NoPictureA11yDesc=Select this option to use no icon image.
+ACS_NullA11yDesc=null
+ACS_ImageSourceNameA11yDesc=Image name.
+ACS_ImageSourceNameTextFieldA11yName=Image name text field
+ACS_ImageSourceNameTextFieldA11yDesc=Image name text field.
+ACS_ImageSourceNameBrowseButtonA11yName=Browse Button
+ACS_ImageSourceNameBrowseButtonA11yDesc=Browse filesystems to select icon image.
 
 #Bean info features properties and hints
 
