#16814 fixed sy setting an error limit.

--- a/xml.tools/src/org/netbeans/modules/xml/tools/actions/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/actions/Bundle.properties
@@ -41,3 +41,5 @@ MSG_parser_plug=Using JAXP parser at {0}.
 
 ## XMLDisplayer.java
 TITLE_XML_check_window=XML check
+
+MSG_too_many_errs=Too many errors, stopping further checking.
