--- a/utilities/src/org/netbeans/modules/search/Bundle.properties
+++ b/utilities/src/org/netbeans/modules/search/Bundle.properties
@@ -19,6 +19,7 @@ TEXT_BUTTON_STOP=Stop Search
 TEXT_BUTTON_CUSTOMIZE=Modify Search
 TEXT_BUTTON_SEARCH=Search
 TEXT_BUTTON_CANCEL=Cancel
+TEXT_BUTTON_CANCEL_MNEM=C
 TEXT_BUTTON_HELP=Help
 TEXT_BUTTON_SORT=\ Sort by Name
 TEXT_BUTTON_UNSORT=\ Do Not Sort
