Module names capitalization.

--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/resources/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/resources/Bundle.properties
@@ -10,7 +10,7 @@
 # Microsystems, Inc. All Rights Reserved.
 
 ## xml/catalog/manifest.mf
-OpenIDE-Module-Name=XML catalog
+OpenIDE-Module-Name=XML Entity Catalog
 OpenIDE-Module-Display-Category=XML
 OpenIDE-Module-Short-Description=The module allows to persistently mount entity catalogs.
 OpenIDE-Module-Long-Description=The module allows to persistently mount entity catalogs. This implementation support NetBeans native catalog and standard XML catalog. Module also offer SPI to support another catalog implementation plug in.
