--- a/xml.text/src/org/netbeans/modules/xml/text/resources/Bundle.properties
+++ b/xml.text/src/org/netbeans/modules/xml/text/resources/Bundle.properties
@@ -10,7 +10,7 @@
 # Microsystems, Inc. All Rights Reserved.
 
 ## xml/text-edit/manifest.mf
-OpenIDE-Module-Name=XML text editing support
+OpenIDE-Module-Name=XML Text Editor
 OpenIDE-Module-Display-Category=XML
 OpenIDE-Module-Short-Description=The module provides text editing capabilities.
-OpenIDE-Module-Long-Description=The module provides text editing capabilities. It adds syntax coloring, abbreviation support and simple indentation engine into text editing of XML and DTD documents.
+OpenIDE-Module-Long-Description=The module provides text editing capabilities. It adds syntax coloring, simple code completion, abbreviation support and simple indentation engine into text editing of XML and DTD documents.
