--- a/xml.tools/src/org/netbeans/modules/xml/tools/resources/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/resources/Bundle.properties
@@ -10,7 +10,7 @@
 # Microsystems, Inc. All Rights Reserved.
 
 ## xml/tools/manifest.mf
-OpenIDE-Module-Name=XML tools
+OpenIDE-Module-Name=XML Productivity Tools
 OpenIDE-Module-Display-Category=XML
 OpenIDE-Module-Short-Description=The module contains various actions, generators and tools.
 OpenIDE-Module-Long-Description=The module contains various actions, generators and tools. Especially action to generate simple DTD from XML document, or wizard which generate SAX handler implementation according to selected DTD document.
