--- a/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
+++ b/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
@@ -10,7 +10,7 @@
 # Microsystems, Inc. All Rights Reserved.
 
 ## xml/core/manifest.mf
-OpenIDE-Module-Name=XML core
+OpenIDE-Module-Name=XML Core
 OpenIDE-Module-Display-Category=XML
 OpenIDE-Module-Short-Description=The module is a base for all XML related modules.
 OpenIDE-Module-Long-Description=The module is a base for all XML related modules. It recognizes XML and DTD documents, which can be opened in text editor. It supports parsing of those documents into TAX (Tree API for XML) representation. It supports synchronization among document representations. It also holds all settings shared among all XML related modules.
