--- a/xml.tax/src/org/netbeans/modules/xml/tax/resources/Bundle.properties
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/resources/Bundle.properties
@@ -10,7 +10,7 @@
 # Microsystems, Inc. All Rights Reserved.
 
 ## xml/tax/manifest.mf
-OpenIDE-Module-Name=TAX
+OpenIDE-Module-Name=TAX Library
 OpenIDE-Module-Display-Category=XML
 OpenIDE-Module-Short-Description=The module contains Tree API for XML ("TAX") library.
 OpenIDE-Module-Long-Description=The module contains Tree API for XML ("TAX") library. It allows tree manipulation of XML and DTD documents structure, including event, traversal and i/o support.
