--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -463,6 +463,8 @@ LAB_AUTH_User_Name=User Name\:
 LAB_AUTH_Password=Password\:
 LAB_FS_Configuration=Configuration
 
+LBL_savingSettings=Saving settings ...
+
 # File names on system filesystem
 # Each key is resource path to a primary file
 # Value should give localized display name for data node
