Bugfix #16656, uncompilable class based on Beans|BeanInfo template

--- a/beans/src/org/netbeans/modules/beans/resources/templates/BeanInfo.template
+++ b/beans/src/org/netbeans/modules/beans/resources/templates/BeanInfo.template
@@ -4,29 +4,39 @@ import java.beans.*;
 
 public class __NAME__ extends SimpleBeanInfo {
 
-    private static BeanDescriptor beanDescriptor = null; //GEN-FIRST:BeanDescriptor
+    // Bean descriptor information will be obtained from introspection.//GEN-FIRST:BeanDescriptor
+    private static BeanDescriptor beanDescriptor = null;
+    private static BeanDescriptor getBdescriptor(){
+    //GEN-HEADEREND:BeanDescriptor
 
     // Here you can add code for customizing the BeanDescriptor.
 
-    //GEN-LAST:BeanDescriptor
+         return beanDescriptor;     } //GEN-LAST:BeanDescriptor
 
-    private static PropertyDescriptor[] properties = null; //GEN-FIRST:Properties
+
+    // Properties information will be obtained from introspection.//GEN-FIRST:Properties
+    private static PropertyDescriptor[] properties = null;
+    private static PropertyDescriptor[] getPdescriptor(){//GEN-HEADEREND:Properties
 
     // Here you can add code for customizing the properties array.
 
-    //GEN-LAST:Properties
+        return properties;     } //GEN-LAST:Properties
 
-    private static EventSetDescriptor[] eventSets = null; //GEN-FIRST:Events
+    // Event set information will be obtained from introspection.//GEN-FIRST:Events
+    private static EventSetDescriptor[] eventSets = null;
+    private static EventSetDescriptor[] getEdescriptor(){//GEN-HEADEREND:Events
 
     // Here you can add code for customizing the event sets array.
 
-    //GEN-LAST:Events
+        return eventSets;     } //GEN-LAST:Events
 
-    private static MethodDescriptor[] methods = null; //GEN-FIRST:Methods
+    // Method information will be obtained from introspection.//GEN-FIRST:Methods
+    private static MethodDescriptor[] methods = null;
+    private static MethodDescriptor[] getMdescriptor(){//GEN-HEADEREND:Methods
 
     // Here you can add code for customizing the methods array.
     
-    //GEN-LAST:Methods
+        return methods;     } //GEN-LAST:Methods
 
     private static java.awt.Image iconColor16 = null; //GEN-BEGIN:IconsDef
     private static java.awt.Image iconColor32 = null;
